# LLM-benchmarking-ext

./: README.md  app.py
extended/: .gitignore  README.md  pyproject.toml  requirements.txt
extended/humaneval_t/: __init__.py  assembler.py  build_benchmark.py  dataset.py  delta.py  evaluator.py  materializer.py  pict_io.py  schema.py  streamlit_app.py
extended/output/: V1.json  V2.json  V3.json  V4.json  V5.json  manifest.json
extended/templates/: HumanEval_0.json  HumanEval_1.json  HumanEval_10.json  HumanEval_100.json  HumanEval_101.json  HumanEval_102.json  HumanEval_103.json  HumanEval_104.json  HumanEval_105.json  HumanEval_106.json  HumanEval_107.json  HumanEval_108.json  HumanEval_109.json  HumanEval_11.json  HumanEval_110.json  HumanEval_111.json  HumanEval_112.json  HumanEval_113.json  HumanEval_114.json  HumanEval_115.json  HumanEval_116.json  HumanEval_117.json  HumanEval_118.json  HumanEval_119.json  HumanEval_12.json  HumanEval_120.json  HumanEval_121.json  HumanEval_122.json  HumanEval_123.json  HumanEval_124.json  HumanEval_125.json  HumanEval_126.json  HumanEval_127.json  HumanEval_128.json  HumanEval_129.json  HumanEval_13.json  HumanEval_130.json  HumanEval_131.json  HumanEval_132.json  HumanEval_133.json  (+124 more)
old/: main.py
old/humanEval benchmark/: generated_outputs_problem1.txt  generated_outputs_problem10.txt  generated_outputs_problem2.txt  generated_outputs_problem3.txt  generated_outputs_problem4.txt  generated_outputs_problem5.txt  generated_outputs_problem6.txt  generated_outputs_problem7.txt  generated_outputs_problem8.txt  human.py  (+2 more)
(+30 files in other folders)
