[project]
name = "humaneval-t"
version = "0.1.0"
description = "Extension of HumanEval_T from 10 to 164 problems with PICT-driven combinatorial variants."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6",
  "requests>=2.31",
  "python-Levenshtein>=0.25",
  "streamlit>=1.30",
  "pulp>=2.7",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
delta = ["sentence-transformers>=2.7"]
eval = ["openai>=1.40", "anthropic>=0.34"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["humaneval_t*"]
